# MelodyMatch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  mainFilter.cpp  mainMenu.h  mainMenumain.cpp  songDatamain.cpp  songsDataFilter.cpp  songsDataFilter.h  userTest
header/: SongsDataManager.h  loginAuth.h  mainMenu.h  song.h  songsDataFilter.h  songsDataManager.h  user.h
src/: SongsDataManager.cpp  loginAuth.cpp  main.cpp  mainMenu.cpp  mainMenu.h  mainMenumain.cpp  song.cpp  songsDataFilter.cpp  songsDataManager.cpp  user.cpp
test/: test.cpp  testSong.cpp
unitTestSong/: loginAuthTest.cpp  mainLogin.cpp  songTest.cpp  userTest.cpp
